<resources>
    <string name="app_name">umoto</string>
    <string name="Umoto">umoto</string>
    <string name="login_as_user">Login as user</string>
    <string name="login_as_mechanic">Login as mechanic</string>
    <string name="login_as_automobile_shop_owner">Login as automobile shop owner</string>
    <string name="welcome">Welcome</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="e_mail">E-mail id</string>
    <string name="Password" />
    <string name="password">Password</string>
    <string name="google">Google Signup</string>
    <string name="facebook">Facebook</string>
    <string name="signup_now">Signup Now</string>
    <string name="already_heve_aan_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loginNow">Login Now</string>
    <string name="needhelp">Need Help</string>
    <string name="if_you_are_new">if you are new or</string>
    <string name="logout">logout</string>
    <string name="save">Save</string>

    <string-array name="Cities">
        <item>Nagpur</item>
        <item>Delhi</item>
        <item>Mumbai</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_confirm_people">MapsActivityConfirmPeople</string>

</resources>