<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundpink"
    tools:context=".Autoshopowner.LoginAsAAutoshopOwner">

    <ImageView
        android:id="@+id/Welcome"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/welcome"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/loginAsAutoShopOwnerfacebookButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button_blue"
        android:text="@string/facebook"
        app:layout_constraintBottom_toTopOf="@+id/loginAsUserFullName"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button


        android:id="@+id/loginAsAutoShopOwnergoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginStart="280dp"
        android:layout_marginTop="-50dp"

        android:background="@drawable/round_button_red"
        android:text="@string/google"

        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/loginAsUserFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText

        android:id="@+id/loginAsAutoShopOwnerFullName"
        android:layout_width="260dp"
        android:paddingStart="20dp"

        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"

        android:layout_marginTop="50dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:background="@drawable/round_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.203"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/loginAsAutoShopOwnerMobileNumber"
        android:layout_width="260dp"
        android:paddingStart="20dp"
        android:layout_height="47dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="23dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/round_button"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserFullName"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/loginAsAutoShopOwnerEmailId"
        android:layout_width="260dp"
        android:layout_height="47dp"
        android:paddingStart="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="23dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/round_button"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserMobileNumber"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/loginAsAutoShopOwnerPassword"
        android:layout_width="260dp"
        android:layout_height="47dp"
        android:layout_marginLeft="80dp"
        android:paddingStart="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="23dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/round_button"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserEmailId"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />





    <Button
        android:id="@+id/loginAsAutoShopOwnersignUpButton"
        android:layout_width="190dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="110dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_green"
        android:text="@string/signup_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserPassword"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/loginAsAutoShopOwnerraedytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"

        android:textColor="@color/purple_700"
        android:layout_marginStart="50dp"
        android:text="@string/already_heve_aan_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUsersignUpButton"
        />
    <Button
        android:id="@+id/loginAsAutoShopOwnerLoginButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="270dp"
        android:background="@drawable/round_button_transparent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserPassword"
        app:layout_constraintVertical_bias="0.228"/>

</LinearLayout>