<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradent_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLoginScreen1"
        android:layout_width="236dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginLeft="90dp"
        android:layout_height="93dp"
        android:text="@string/Umoto"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/loginAsUserButton"
        android:layout_width="330dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:text="@string/login_as_user"
        android:textAlignment="textStart"
        android:paddingStart="18dp"
        android:textAllCaps="false"

        android:textColor="@color/grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginScreen1"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginAsaMechanicButton"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/login_as_mechanic"
        android:textAlignment="textStart"
        android:paddingStart="18dp"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsUserButton"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginAsAutomobileShopownerButton"
        android:layout_width="330dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textSize="17dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:text="@string/login_as_automobile_shop_owner"
        android:textAlignment="textStart"
        android:paddingStart="18dp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAsaMechanicButton"
        app:layout_constraintVertical_bias="0.151"
        tools:ignore="TextContrastCheck" />
</LinearLayout>